[gd_scene load_steps=6 format=3 uid="uid://botv6f64mvdwl"]

[ext_resource type="Script" path="res://Global.gd" id="1_1ro20"]

[sub_resource type="Animation" id="Animation_x3vgb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlobalUI/BroadcastLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_onhf5"]
resource_name = "broadcast_fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlobalUI/BroadcastLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ghp2p"]
resource_name = "broadcast_fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlobalUI/BroadcastLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3c2n"]
_data = {
"RESET": SubResource("Animation_x3vgb"),
"broadcast_fade_in": SubResource("Animation_onhf5"),
"broadcast_fade_out": SubResource("Animation_ghp2p")
}

[node name="Global" type="Node2D"]
script = ExtResource("1_1ro20")

[node name="GlobalUI" type="CanvasLayer" parent="."]

[node name="BroadcastLabel" type="Label" parent="GlobalUI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "test text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_v3c2n")
}

[node name="BroadcastTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="BroadcastTimer" to="." method="_on_broadcast_timer_timeout"]
